Correct FAN section mobile layout

--- a/sass/_article-media.sass
+++ b/sass/_article-media.sass
@@ -58,7 +58,7 @@
   width: 32.33332%
 
 .article--m
-  width: 49%
+  width: 48%
 
 .article--l
   width: 65.66665%
@@ -74,6 +74,9 @@
 
 .article--fan .article__img
   margin-bottom: -5px
+
+.article--fan
+  box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.3)
 
 
 @media only screen and (max-width: $break-desk)
@@ -93,6 +96,10 @@
 
   .article--fan .article__img
     width: 100%
+
+  .fanDeVu .container .article:nth-child(2n+0)
+    margin-right: 0
+    margin-left: 2%
 
 
 @media only screen and (min-width: $break-tab)
