--- a/sass/_mainNavigation.sass
+++ b/sass/_mainNavigation.sass
@@ -9,6 +9,9 @@
   .page.menuOpened
     left: 280px
 
+  body.menuOpened, html.menuOpened
+    overflow: hidden
+
   .header__nav--wrap
     +container(260px, 0, 0 10px)
     background: $white
