--- a/sass/master.css
+++ b/sass/master.css
@@ -238,6 +238,8 @@ header i {
 @media only screen and (min-width: 319px) and (max-width: 1025px) {
   .page.menuOpened {
     left: 280px; }
+  body.menuOpened, html.menuOpened {
+    overflow: hidden; }
   .header__nav--wrap {
     width: 260px;
     margin: 0;
@@ -409,7 +411,7 @@ header i {
   width: 32.33332%; }
 
 .article--m {
-  width: 49%; }
+  width: 48%; }
 
 .article--l {
   width: 65.66665%; }
@@ -426,6 +428,9 @@ header i {
 .article--fan .article__img {
   margin-bottom: -5px; }
 
+.article--fan {
+  box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.3); }
+
 @media only screen and (max-width: 1025px) {
   .article__desc {
     display: none; } }
@@ -437,7 +442,10 @@ header i {
     width: 80%;
     padding: 20px 10%; }
   .article--fan .article__img {
-    width: 100%; } }
+    width: 100%; }
+  .fanDeVu .container .article:nth-child(2n+0) {
+    margin-right: 0;
+    margin-left: 2%; } }
 
 @media only screen and (min-width: 768px) {
   .article--fan .article__img, .article--fan .article__body {
